--- a/autoridades.html
+++ b/autoridades.html
@@ -22,12 +22,12 @@
 	<main>
 		<div class="autoridades">
 			<h1>Autoridades</h1>
-			<img src="galeria/salvadori_sosa.jpeg" alt="jefe Division Seguridad">
+			<img src="salvadori_sosa.jpeg" alt="jefe Division Seguridad">
 			<h3>Jefe:</h3><br>
 			<p>Comisario Martin SALVADORI SOSA</p></br>	
 			<br>
 			<br>
-			<img src="galeria/molli.jpeg" alt="2° jefe Division Seguridad">
+			<img src="molli.jpeg" alt="2° jefe Division Seguridad">
 
 			<h3>2° Jefe:</h3><br>
 			<p>Subcomisario Ruben Emilio MOLLI<br>
