--- a/galeria.html
+++ b/galeria.html
@@ -21,21 +21,21 @@
 	<main>
 		<div>
 			<h1>GALERIA</h1>
-			<img src="galeria/g1.jpeg">
-			<img src="galeria/g2.jpeg">
-			<img src="galeria/g3.jpeg">
-			<img src="galeria/g4.jpeg">
-			<img src="galeria/g5.jpeg">
-			<img src="galeria/g6.jpeg">
-			<img src="galeria/g7.jpeg">
-			<img src="galeria/g8.jpeg">
-			<img src="galeria/g9.jpeg">
-			<img src="galeria/g10.jpeg">
-			<img src="galeria/g11.jpeg">
-			<img src="galeria/g12.jpeg">
-			<img src="galeria/g13.jpeg">
-			<img src="galeria/g14.jpeg">
-			<img src="galeria/g15.jpeg">		
+			<img src="g1.jpeg">
+			<img src="g2.jpeg">
+			<img src="g3.jpeg">
+			<img src="g4.jpeg">
+			<img src="g5.jpeg">
+			<img src="g6.jpeg">
+			<img src="g7.jpeg">
+			<img src="g8.jpeg">
+			<img src="g9.jpeg">
+			<img src="g10.jpeg">
+			<img src="g11.jpeg">
+			<img src="g12.jpeg">
+			<img src="g13.jpeg">
+			<img src="g14.jpeg">
+			<img src="g15.jpeg">		
 		</div>
 	</main>
 	<footer>
