--- a/puestos.html
+++ b/puestos.html
@@ -22,7 +22,7 @@
 	
 		<div class="map">
 			<h1>Estacionamiento Reservado de Autoridades</h1>
-			<img src= "cochera-p4.jpeg" width="600" height="450" style="border:0;" ></img>
+			<img src= "COCHERAS_P4.jpeg" width="600" height="450" style="border:0;" ></img>
 			<p>
 				
 
