--- a/autoridades.html
+++ b/autoridades.html
@@ -16,7 +16,7 @@
 			<li><a href="personal.html">Personal</a></li>
 			<li><a href="galeria.html">Galeria</a></li>
 			<li><a href="puestos.html">Puestos</a></li>
-			<li><a href="organigrama.html">Organigrama</a></li>
+			<li><a href="ORGANIGRAMA.HTML">Organigrama</a></li>
 		</ul> 
 	</header>
 	
