--- a/ORGANIGRAMA.HTML
+++ b/ORGANIGRAMA.HTML
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>ORGANIGRAMA</title>
-	<link rel="stylesheet" type="text/css" href="organigrama.css">
+	<link rel="stylesheet" type="text/css" href="ORGANIGRAMA.css">
 </head>
 <body>
 	<div class="tree">
