--- a/ORGANIGRAMA.HTML
+++ b/ORGANIGRAMA.HTML
@@ -13,7 +13,7 @@
 				<ul>
 				<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>SUBDIRECTOR</span><span>Crio Mayor<br> PERALTA</span></a>
 				<ul>
-					<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>CAPACITACION Y EVALUACION</span><span>Crio Insp <br>Patricio GIL</span></a>
+					<li><a href="#"><img src="sin-foto.jpg" alt=""><span>CAPACITACION Y EVALUACION</span><span>Crio Insp <br>Patricio GIL</span></a>
 						<ul>
 							<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>CAPACITACION Y ENTRENAMIENTO</span><span>Crio<br> Sabrina BANCIELLA</span></a>
 								<ul>
