--- a/autoridades.html
+++ b/autoridades.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="autoridades.css">
+	<link rel="stylesheet" type="text/css" href="ORGANIGRAMA.CSS">
 	<link rel="icon" type="text/css" href="escudo_div_seg.ico">
 	<title>División Guardia de Prevención</title>
 </head>
