--- a/ORGANIGRAMA.HTML
+++ b/ORGANIGRAMA.HTML
@@ -9,49 +9,49 @@
 <body>
 	<div class="tree">
 		<ul>
-			<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>DIRECTOR</span><span>Crio Gral<br> Ana MOLINA</span></a>
+			<li><a href="#"><img src="sin-foto.jpg" alt=""><span>DIRECTOR</span><span>Crio Gral<br> Ana MOLINA</span></a>
 				<ul>
-				<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>SUBDIRECTOR</span><span>Crio Mayor<br> PERALTA</span></a>
+				<li><a href="#"><img src="sin-foto.jpg" alt=""><span>SUBDIRECTOR</span><span>Crio Mayor<br> PERALTA</span></a>
 				<ul>
 					<li><a href="#"><img src="sin-foto.jpg" alt=""><span>CAPACITACION Y EVALUACION</span><span>Crio Insp <br>Patricio GIL</span></a>
 						<ul>
-							<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>CAPACITACION Y ENTRENAMIENTO</span><span>Crio<br> Sabrina BANCIELLA</span></a>
+							<li><a href="#"><img src="sin-foto.jpg" alt=""><span>CAPACITACION Y ENTRENAMIENTO</span><span>Crio<br> Sabrina BANCIELLA</span></a>
 								<ul>
-									<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>CAPACITACION SUPERIOR</span><span>Subcrio<br> Mariano LOZADA</span></a></li>
-									<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>CAPACITACION PERMANENTE</span><span>Subcrio<br> Lucas PIETRO</span></a></li>
+									<li><a href="#"><img src="sin-foto.jpg" alt=""><span>CAPACITACION SUPERIOR</span><span>Subcrio<br> Mariano LOZADA</span></a></li>
+									<li><a href="#"><img src="sin-foto.jpg" alt=""><span>CAPACITACION PERMANENTE</span><span>Subcrio<br> Lucas PIETRO</span></a></li>
 								</ul></li>
-							<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>EVALUACION</span><span>Crio<br> Jorge ROMA</span></a>
+							<li><a href="#"><img src="sin-foto.jpg" alt=""><span>EVALUACION</span><span>Crio<br> Jorge ROMA</span></a>
 								<ul>
-									<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>PEP</span><span>Subcrio<br> SILVA</span></a></li>
-									<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>ASCENSO</span><span>Subcrio<br> KAPLUN</span></a></li>
+									<li><a href="#"><img src="sin-foto.jpg" alt=""><span>PEP</span><span>Subcrio<br> SILVA</span></a></li>
+									<li><a href="#"><img src="sin-foto.jpg" alt=""><span>ASCENSO</span><span>Subcrio<br> KAPLUN</span></a></li>
 								</ul></li>
 						</ul>	
 					</li>
-					<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>CUERPO DE CADETES</span><span>Crio<br> Leandro CAPRIO MUJICO</span></a>
+					<li><a href="#"><img src="sin-foto.jpg" alt=""><span>CUERPO DE CADETES</span><span>Crio<br> Leandro CAPRIO MUJICO</span></a>
 						<ul>
-							<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>ACTUACIONES Y REGISTROS</span><span>Crio<br> Federico GACHARICH</span></a></li>
-							<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>AYUDANTIA DE CUERPO</span><span>Crio<br></span></a>
+							<li><a href="#"><img src="sin-foto.jpg" alt=""><span>ACTUACIONES Y REGISTROS</span><span>Crio<br> Federico GACHARICH</span></a></li>
+							<li><a href="#"><img src="sin-foto.jpg" alt=""><span>AYUDANTIA DE CUERPO</span><span>Crio<br></span></a>
 								<ul>
-									<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>CUERPO DE CADETES</span><span>Subcrio<br> Paola LOPEZ</span></a>
+									<li><a href="#"><img src="sin-foto.jpg" alt=""><span>CUERPO DE CADETES</span><span>Subcrio<br> Paola LOPEZ</span></a>
 								</ul>	
 							</li>
 						</ul>
 					</li>
-					<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>INCORPORACIONES</span><span>Crio<br> Julieta GRILLO</span></a>
+					<li><a href="#"><img src="sin-foto.jpg" alt=""><span>INCORPORACIONES</span><span>Crio<br> Julieta GRILLO</span></a>
 						<ul>
-							<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>EVALUACION DE INGRESOS</span><span>Subcrio<br> Lorena AGUIRRE</span></a></li>
-							<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>DOCUMENTOS E INFORMES</span><span>Crio<br> Alexis MAGGIO</span></a></li>
+							<li><a href="#"><img src="sin-foto.jpg" alt=""><span>EVALUACION DE INGRESOS</span><span>Subcrio<br> Lorena AGUIRRE</span></a></li>
+							<li><a href="#"><img src="sin-foto.jpg" alt=""><span>DOCUMENTOS E INFORMES</span><span>Crio<br> Alexis MAGGIO</span></a></li>
 						</ul>
 					</li>	
-					<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>ESPECIALIZACION POLICIAL</span><span>Crio Insp<br> Francisco VARDE</span></a>
+					<li><a href="#"><img src="sin-foto.jpg" alt=""><span>ESPECIALIZACION POLICIAL</span><span>Crio Insp<br> Francisco VARDE</span></a>
 						<ul>
-							<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>CURSOS DE ESPECIALIZACION</span><span>Crio<br> German HERZOG</span></a></li>
-							<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>ESCUELAS</span><span>Crio<br> Marcelo BARRIONUEVO</span></a>
+							<li><a href="#"><img src="sin-foto.jpg" alt=""><span>CURSOS DE ESPECIALIZACION</span><span>Crio<br> German HERZOG</span></a></li>
+							<li><a href="#"><img src="sin-foto.jpg" alt=""><span>ESCUELAS</span><span>Crio<br> Marcelo BARRIONUEVO</span></a>
 								<ul>
-									<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>FORMACION INICIAL</span><span>Auxiliar 1°<br> CENDON</span></a></li>
-									<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>TIRO</span><span>Subcrio<br> BAILLATTE</span></a>
-									<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>CONDUCTORES</span><span>Principal<br> Omar MARIEZCURRENA</span></a></li>
-									<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>FORMACION INSTRUCTORES<br> PARA ADIESTRAMIENTO<br> DE CANES</span><span>Subcrio<br> Jorge RAICE</span></a>
+									<li><a href="#"><img src="sin-foto.jpg" alt=""><span>FORMACION INICIAL</span><span>Auxiliar 1°<br> CENDON</span></a></li>
+									<li><a href="#"><img src="sin-foto.jpg" alt=""><span>TIRO</span><span>Subcrio<br> BAILLATTE</span></a>
+									<li><a href="#"><img src="sin-foto.jpg" alt=""><span>CONDUCTORES</span><span>Principal<br> Omar MARIEZCURRENA</span></a></li>
+									<li><a href="#"><img src="sin-foto.jpg" alt=""><span>FORMACION INSTRUCTORES<br> PARA ADIESTRAMIENTO<br> DE CANES</span><span>Subcrio<br> Jorge RAICE</span></a>
 								</ul>
 							</li>
 						</ul>
