--- a/ORGANIGRAMA.HTML
+++ b/ORGANIGRAMA.HTML
@@ -13,7 +13,7 @@
 				<ul>
 				<li><a href="#"><img src="sin-foto.jpg" alt=""><span>SUBDIRECTOR</span><span>Crio Mayor<br> PERALTA</span></a>
 				<ul>
-					<li><a href="#"><img src="sin-foto.jpg" alt=""><span>CAPACITACION Y EVALUACION</span><span>Crio Insp <br>Patricio GIL</span></a>
+					<li><a href="#"><img src="GIL.jpeg" alt=""><span>CAPACITACION Y EVALUACION</span><span>Crio Insp <br>Patricio GIL</span></a>
 						<ul>
 							<li><a href="#"><img src="sin-foto.jpg" alt=""><span>CAPACITACION Y ENTRENAMIENTO</span><span>Crio<br> Sabrina BANCIELLA</span></a>
 								<ul>
@@ -37,7 +37,7 @@
 							</li>
 						</ul>
 					</li>
-					<li><a href="#"><img src="sin-foto.jpg" alt=""><span>INCORPORACIONES</span><span>Crio<br> Julieta GRILLO</span></a>
+					<li><a href="#"><img src="GRILLO.jpeg" alt=""><span>INCORPORACIONES</span><span>Crio<br> Julieta GRILLO</span></a>
 						<ul>
 							<li><a href="#"><img src="sin-foto.jpg" alt=""><span>EVALUACION DE INGRESOS</span><span>Subcrio<br> Lorena AGUIRRE</span></a></li>
 							<li><a href="#"><img src="sin-foto.jpg" alt=""><span>DOCUMENTOS E INFORMES</span><span>Crio<br> Alexis MAGGIO</span></a></li>
@@ -46,7 +46,7 @@
 					<li><a href="#"><img src="sin-foto.jpg" alt=""><span>ESPECIALIZACION POLICIAL</span><span>Crio Insp<br> Francisco VARDE</span></a>
 						<ul>
 							<li><a href="#"><img src="sin-foto.jpg" alt=""><span>CURSOS DE ESPECIALIZACION</span><span>Crio<br> German HERZOG</span></a></li>
-							<li><a href="#"><img src="sin-foto.jpg" alt=""><span>ESCUELAS</span><span>Crio<br> Marcelo BARRIONUEVO</span></a>
+							<li><a href="#"><img src="BARRIONUEVO.jpeg" alt=""><span>ESCUELAS</span><span>Crio<br> Marcelo BARRIONUEVO</span></a>
 								<ul>
 									<li><a href="#"><img src="sin-foto.jpg" alt=""><span>FORMACION INICIAL</span><span>Auxiliar 1°<br> CENDON</span></a></li>
 									<li><a href="#"><img src="sin-foto.jpg" alt=""><span>TIRO</span><span>Subcrio<br> BAILLATTE</span></a>
