--- a/ORGANIGRAMA.HTML
+++ b/ORGANIGRAMA.HTML
@@ -39,7 +39,7 @@
 					</li>
 					<li><a href="#"><img src="GRILLO.jpeg" alt=""><span>INCORPORACIONES</span><span>Crio<br> Julieta GRILLO</span></a>
 						<ul>
-							<li><a href="#"><img src="sin-foto.jpg" alt=""><span>EVALUACION DE INGRESOS</span><span>Subcrio<br> Lorena AGUIRRE</span></a></li>
+							<li><a href="#"><img src="sub-aguirre.jpg" alt=""><span>EVALUACION DE INGRESOS</span><span>Subcrio<br> Lorena AGUIRRE</span></a></li>
 							<li><a href="#"><img src="sin-foto.jpg" alt=""><span>DOCUMENTOS E INFORMES</span><span>Crio<br> Alexis MAGGIO</span></a></li>
 						</ul>
 					</li>	
