--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<li><a href="personal.html">Personal</a></li>
 			<li><a href="galeria.html">Galeria</a></li>
 			<li><a href="puestos.html">Puestos</a></li>
-			<li><a href="organigrama2.html">Organigrama</a></li>
+			<li><a href="ORGANIGRAMA2.html">Organigrama</a></li>
 			<li><a href="ley.html">ley 5688</a></li>
 		</ul> 
 	</header>
