--- a/ORGANIGRAMA2.HTML
+++ b/ORGANIGRAMA2.HTML
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>ORGANIGRAMA</title>
-	<link rel="stylesheet" type="text/css" href="organigrama2.css">
+	<link rel="stylesheet" type="text/css" href="ORGANIGRAMA2.CSS">
 </head>
 <body>
 	<div class="tree">
