--- a/ORGANIGRAMA2.HTML
+++ b/ORGANIGRAMA2.HTML
@@ -10,60 +10,60 @@
 <body>
 	<div class="tree">
 		<ul>
-			<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>DIRECTOR</span><span>Crio Gral<br> Ana MOLINA</span></a>
+			<li><a href="#"><img src="sin-foto.jpg" alt=""><span>DIRECTOR</span><span>Crio Gral<br> Ana MOLINA</span></a>
 				<ul>
-					<a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>SUBDIRECTOR</span><span>Crio Mayor<br> PERALTA</span></a>
+					<a href="#"><img src="sin-foto.jpg" alt=""><span>SUBDIRECTOR</span><span>Crio Mayor<br> PERALTA</span></a>
 						<ul>
-							<li><a href="#"><img src="galeria/GIL.jpeg" alt=""><span>CAPACITACION Y EVALUACION</span><span>Crio Insp<br>Patricio GIL</span></a>
+							<li><a href="#"><img src="GIL.jpeg" alt=""><span>CAPACITACION Y EVALUACION</span><span>Crio Insp<br>Patricio GIL</span></a>
 								<ul>
-									<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>CAPACITACION Y ENTRENAMIENTO</span><span>Crio<br> Sabrina BANCIELLA</span></a>
+									<li><a href="#"><img src="sin-foto.jpg" alt=""><span>CAPACITACION Y ENTRENAMIENTO</span><span>Crio<br> Sabrina BANCIELLA</span></a>
 										<ul>
-											<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>CAPACITACION SUPERIOR</span><span>Subcrio<br> Mariano LOZADA</span></a></li>
-											<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>CAPACITACION PERMANENTE</span><span>Subcrio<br> Lucas PIETRO</span></a></li>
+											<li><a href="#"><img src="sin-foto.jpg" alt=""><span>CAPACITACION SUPERIOR</span><span>Subcrio<br> Mariano LOZADA</span></a></li>
+											<li><a href="#"><img src="sin-foto.jpg" alt=""><span>CAPACITACION PERMANENTE</span><span>Subcrio<br> Lucas PIETRO</span></a></li>
 										</ul>
 									</li>	
-									<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>EVALUACION</span><span>Crio<br> Jorge ROMA</span></a>
+									<li><a href="#"><img src="sin-foto.jpg" alt=""><span>EVALUACION</span><span>Crio<br> Jorge ROMA</span></a>
 										<ul>
-											<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>PEP</span><span>Subcrio<br> SILVA</span></a></li>
-											<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>ASCENSO</span><span>Subcrio<br> KAPLUN</span></a></li>
+											<li><a href="#"><img src="sin-foto.jpg" alt=""><span>PEP</span><span>Subcrio<br> SILVA</span></a></li>
+											<li><a href="#"><img src="sin-foto.jpg" alt=""><span>ASCENSO</span><span>Subcrio<br> KAPLUN</span></a></li>
 										</ul>
 									</li>
 								</ul>
 							</li>	
 
-							<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>CUERPO DE CADETES</span><span>Crio<br> Leandro CAPRIO MUJICO</span></a>
+							<li><a href="#"><img src="sin-foto.jpg" alt=""><span>CUERPO DE CADETES</span><span>Crio<br> Leandro CAPRIO MUJICO</span></a>
 								<ul>
-									<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>ACTUACIONES Y REGISTROS</span><span>Crio<br> Federico GACHARICH</span></a></li>
-									<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>AYUDANTIA DE CUERPO</span><span>Crio<br>Leandro CAPRIO MUJICO</span></a>
+									<li><a href="#"><img src="sin-foto.jpg" alt=""><span>ACTUACIONES Y REGISTROS</span><span>Crio<br> Federico GACHARICH</span></a></li>
+									<li><a href="#"><img src="sin-foto.jpg" alt=""><span>AYUDANTIA DE CUERPO</span><span>Crio<br>Leandro CAPRIO MUJICO</span></a>
 										<ul>
-											<a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>CUERPO DE CADETES</span><span>Subcrio<br> Paola LOPEZ</span></a>
+											<a href="#"><img src="sin-foto.jpg" alt=""><span>CUERPO DE CADETES</span><span>Subcrio<br> Paola LOPEZ</span></a>
 										</ul>
 									</li>
 								</ul>
 							</li>
-							<li><a href="#"><img src="galeria/GRILLO.jpeg" alt=""><span>INCORPORACIONES</span><span>Crio<br> Julieta GRILLO</span></a>
+							<li><a href="#"><img src="GRILLO.jpeg" alt=""><span>INCORPORACIONES</span><span>Crio<br> Julieta GRILLO</span></a>
 								<ul>
-									<li><a href="#"><img src="galeria/SUB-AGUIRRE.jpeg" alt=""><span>EVALUACION DE INGRESOS</span><span>Subcrio<br> Lorena AGUIRRE</span></a></li>
-									<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>DOCUMENTOS E INFORMES</span><span>Crio<br> Alexis MAGGIO</span></a></li>
+									<li><a href="#"><img src="SUB-AGUIRRE.jpeg" alt=""><span>EVALUACION DE INGRESOS</span><span>Subcrio<br> Lorena AGUIRRE</span></a></li>
+									<li><a href="#"><img src="sin-foto.jpg" alt=""><span>DOCUMENTOS E INFORMES</span><span>Crio<br> Alexis MAGGIO</span></a></li>
 								</ul>
 							</li>	
 
-							<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>ESPECIALIZACION POLICIAL</span><span>Crio Insp<br> Francisco VARDE</span></a>
+							<li><a href="#"><img src="sin-foto.jpg" alt=""><span>ESPECIALIZACION POLICIAL</span><span>Crio Insp<br> Francisco VARDE</span></a>
 								<ul>
-									<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>CURSOS DE ESPECIALIZACION</span><span>Crio<br> German HERZOG</span></a></li>
-									<li><a href="#"><img src="galeria/BARRIONUEVO.jpeg" alt=""><span>ESCUELAS</span><span>Crio<br> Marcelo BARRIONUEVO</span></a>
+									<li><a href="#"><img src="sin-foto.jpg" alt=""><span>CURSOS DE ESPECIALIZACION</span><span>Crio<br> German HERZOG</span></a></li>
+									<li><a href="#"><img src="BARRIONUEVO.jpeg" alt=""><span>ESCUELAS</span><span>Crio<br> Marcelo BARRIONUEVO</span></a>
 										<ul>
-											<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>FORMACION INICIAL</span><span>Auxiliar 1°<br> CENDON</span></a></li>
-											<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>TIRO</span><span>Subcrio<br> BAILLATTE</span></a></li>
-											<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>CONDUCTORES</span><span>Principal<br> Omar MARIEZCURRENA</span></a></li>
-											<li><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>FORMACION INSTRUCTORES<br> PARA ADIESTRAMIENTO<br> DE CANES</span><span>Subcrio<br> Jorge RAICE</span></a></li>
+											<li><a href="#"><img src="sin-foto.jpg" alt=""><span>FORMACION INICIAL</span><span>Auxiliar 1°<br> CENDON</span></a></li>
+											<li><a href="#"><img src="sin-foto.jpg" alt=""><span>TIRO</span><span>Subcrio<br> BAILLATTE</span></a></li>
+											<li><a href="#"><img src="sin-foto.jpg" alt=""><span>CONDUCTORES</span><span>Principal<br> Omar MARIEZCURRENA</span></a></li>
+											<li><a href="#"><img src="sin-foto.jpg" alt=""><span>FORMACION INSTRUCTORES<br> PARA ADIESTRAMIENTO<br> DE CANES</span><span>Subcrio<br> Jorge RAICE</span></a></li>
 										</ul>
 									</li>
 								</ul>
 							</li>	
-							<li class="gp1"><a href="#"><img src="galeria/sin-foto.jpg" alt=""><span>SIN DEPARTAMENTO</span><span> sin<br>cargo </span></a>
+							<li class="gp1"><a href="#"><img src="sin-foto.jpg" alt=""><span>SIN DEPARTAMENTO</span><span> sin<br>cargo </span></a>
 								<ul>
-									<a href="#"><img src="galeria/salvadori_sosa.jpeg" alt=""><span>GUARDIA DE PREVENCION</span><span>Crio<br>Martin SALVADORI SOSA</span></a>
+									<a href="#"><img src="salvadori_sosa.jpeg" alt=""><span>GUARDIA DE PREVENCION</span><span>Crio<br>Martin SALVADORI SOSA</span></a>
 								</ul>
 							</li>							
 						</ul>
